--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -46,7 +46,7 @@
         </div>
         <ul>
           <li data-gtm-category="Main navigation">
-            <a class="slide-menu__control" href="#" data-gtm-label="Study">Study</a>
+            <a class="global-mobile-nav__audience-link slide-menu__control" href="#" data-gtm-label="Study">Study</a>
             <ul>
               <li>
                 <a href="/study/" data-gtm-label="Study > Study">Study</a>
@@ -90,7 +90,7 @@
             </ul>
           </li>
           <li data-gtm-category="Main navigation">
-            <a class="slide-menu__control" href="/admissions" aria-haspopup="true" aria-expanded="false" data-gtm-label="Admissions">Admissions</a>
+            <a class="global-mobile-nav__audience-link slide-menu__control" href="/admissions" aria-haspopup="true" aria-expanded="false" data-gtm-label="Admissions">Admissions</a>
             <ul>
               <li>
                 <a href="/admissions" data-gtm-label="Admissions > Admissions">Admissions</a>
@@ -122,7 +122,7 @@
             </ul>
           </li>
           <li data-gtm-category="Main navigation">
-            <a class="slide-menu__control" href="/university-life" aria-haspopup="true" aria-expanded="false" data-gtm-label="University life">University life</a>
+            <a class="global-mobile-nav__audience-link slide-menu__control" href="/university-life" aria-haspopup="true" aria-expanded="false" data-gtm-label="University life">University life</a>
             <ul>
               <li>
                 <a href="/university-life" data-gtm-label="University life > University life">University life</a>
