added search autocomplete off

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -322,7 +322,7 @@
             <fieldset>
               <div class="uq-header__search-query">
                 <label for="edit-q" class="visually-hidden">Search term</label>
-                <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input">
+                <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" autocomplete="off" class="uq-header__search-query-input">
                 <span class="uq-header__search-query-button">
                   <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
                 </span>
