--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -424,7 +424,16 @@
       </div>
     </header>
   
-
+    <!-- Alert -->
+    <div class="uq-alert uq-alert--info uq-alert--dark uq-alert--global uq-alert" role="alert">
+      <div class="uq-alert__container">
+        <div class="uq-alert__message">
+          <h3 class="uq-alert__title visually-hidden">Title goes here</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="#" title="Link" class="uq-button--inline">Link</a></p>
+        </div>
+      </div>
+    </div>
+    
     <!-- Page header (default) -->
 
     <div class="uq-hero uq-hero--feature-image uq-hero--large">  
