--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -223,7 +223,17 @@
         </nav>
       </div>
     </header>
-  
+
+    <!-- Alert -->
+    <div class="uq-alert uq-alert--info uq-alert--dark uq-alert--global uq-alert" role="alert">
+      <div class="uq-alert__container">
+        <div class="uq-alert__message">
+          <h3 class="uq-alert__title visually-hidden">Title goes here</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="#" title="Link" class="uq-button--inline">Link</a></p>
+        </div>
+      </div>
+    </div>
+
     <!-- Site header -->
     <div class="uq-site-header">
       <!-- Site title and utility area with mobile nav toggler (JS) -->
