--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -85,7 +85,7 @@
                         <div class="megamenu__menu">
                           <ul>
                             <li><a href="https://research.uq.edu.au/news/impact" data-gtm-label="Research > Research impact">Research impact</a></li>
-                            <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research support, integrity and ethics">Research support, integrity and ethics</a></li>
+                            <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
                             <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Research > Industry research collaboration">Industry research collaboration</a></li>
                             <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
                             <li><a href="https://research.uq.edu.au/research-infrastructure" data-gtm-label="Research > Research facilities">Research facilities</a></li>
@@ -271,7 +271,7 @@
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our research</a>
                 <ul>
                   <li><a href="https://research.uq.edu.au/news/impact" data-gtm-label="Research > Research impact">Research impact</a></li>
-                  <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research support, integrity and ethics">Research support, integrity and ethics</a></li>
+                  <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
                   <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Research > Industry research collaboration">Industry research collaboration</a></li>
                   <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
                   <li><a href="https://research.uq.edu.au/research-infrastructure" data-gtm-label="Research > Research facilities">Research facilities</a></li>
