--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -160,7 +160,7 @@
         <div class="uq-header__main-nav-wrapper">
           <nav class="uq-header__main-nav">
             <ul class="uq-header__main-nav-list">
-              <li><a class="uq-header__main-nav-link main-nav-link--study" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
+              <li><a class="uq-header__main-nav-link main-nav-link--study" href="https://future-students.uq.edu.au" class="gtm-processed">Study</a>
                 <div class="uq-header__megamenu-wrapper">
                   <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Study overview</a>
@@ -204,7 +204,7 @@
                   </div>
               </div>
               </li>
-              <li><a class="uq-header__main-nav-link main-nav-link--research" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
+              <li><a class="uq-header__main-nav-link main-nav-link--research" href="https://research.uq.edu.au" class="gtm-processed">Research</a>
                 <div class="uq-header__megamenu-wrapper">
                   <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Research overview</a>
@@ -240,7 +240,7 @@
                   </div>
                 </div>
               </li>
-              <li><a class="uq-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and community</a>
+              <li><a class="uq-header__main-nav-link" href="https://global-partnerships.uq.edu.au/partnerships" class="gtm-processed">Partners and community</a>
                 <div class="uq-header__megamenu-wrapper">
                   <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Partners and community overview</a>
@@ -282,7 +282,7 @@
                   </div>
                 </div>
               </li>
-              <li><a class="uq-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
+              <li><a class="uq-header__main-nav-link" href="https://about.uq.edu.au" class="gtm-processed">About</a>
                 <div class="uq-header__megamenu-wrapper">
                   <div class="uq-header__megamenu">
                     <a href="#" class="megamenu__overview-link">About overview</a>
@@ -333,7 +333,7 @@
                 <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
               </div>
               <div class="uq-header__search-range">
-                <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio uq-header__search-radio">
+                <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au" checked="checked" class="form-radio uq-header__search-radio">
                 <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website (future-students.uq.edu.au)</label>
               </div>
             </fieldset>
@@ -344,19 +344,19 @@
         <nav class="uq-header__black-nav">
           <ul class="uq-header__black-nav-list">
               <li class="uq-header__black-nav-item">
-                <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'UQ home'});">UQ home</a>
+                <a href="https://www.uq.edu.au/news" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'UQ home'});">UQ home</a>
               </li>
               <li class="uq-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
+                  <a href="https://www.uq.edu.au/news" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
               </li>
               <li class="uq-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/events/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
+                  <a href="https://www.uq.edu.au/events" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
               </li>
               <li class="uq-header__black-nav-item">
-                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
+                  <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
               </li>
               <li class="uq-header__black-nav-item">
-                <a href="https://uq.edu.au/departments/" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
+                <a href="https://uq.edu.au/departments" rel="external" class="uq-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
               </li>
           </ul>
         </nav>
@@ -431,7 +431,7 @@
                 <label for="edit-as_sitesearch-off" class="option legacy-header__search-label">Search all UQ websites</label>
               </div>
               <div class="legacy-header__search-range">
-                <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio legacy-header__search-radio">
+                <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au" checked="checked" class="form-radio legacy-header__search-radio">
                 <label for="edit-as_sitesearch-on" class="option legacy-header__search-label">Search this website (future-students.uq.edu.au)</label>
               </div>
               <div class="legacy-header__search-query">
@@ -642,7 +642,7 @@
               <h2 class="uq-footer__navigation-title">Staff</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Jobs at UQ</a>
+                  <a href="#" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="#" class="uq-footer__navigation-link">Staff login</a>
@@ -742,7 +742,7 @@
               <button href="#" class="uq-accordion__toggle uq-footer__navigation-toggle">Staff</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Jobs at UQ</a>
+                  <a href="#" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="#" class="uq-footer__navigation-link">Staff login</a>
@@ -841,13 +841,13 @@
         <nav class="uq-footer__footer">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
-                  <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+                  <a href="https://www.uq.edu.au/terms-of-use" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
               </li>
               <li class="uq-footer__footer-item">
-                  <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to information'});">Right to information</a>
+                  <a href="https://www.uq.edu.au/rti" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to information'});">Right to information</a>
               </li>
               <li class="uq-footer__footer-item">
-                  <a href="https://uq.edu.au/accessibility/" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
+                  <a href="https://uq.edu.au/accessibility" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
               </li>
               <li class="uq-footer__footer-menu__item">
                 <a href="https://uq.edu.au/contacts" rel="external" class="uq-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
