--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -34,8 +34,9 @@
                         <div class="megamenu__menu">
                           <ul>
                             <li><a href="https://study.uq.edu.au/study-options/programs" data-gtm-label="Study > Find a course or program">Find a course or program</a></li>
-                            <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
+                            <li><a href="https://study.uq.edu.au/study-options/browse-study-areas" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
                             <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Study options">Study options</a></li>
+                            <li><a href="https://study.uq.edu.au/short-courses" data-gtm-label="Study > Short courses">Short courses</a></li>
                             <li><a href="https://study.uq.edu.au/admissions" data-gtm-label="Study > How to apply">How to apply</a></li>
                             <li><a href="https://scholarships.uq.edu.au" data-gtm-label="Study > Scholarships">Scholarships</a></li>
                             <li><a href="https://my.uq.edu.au/starting-at-uq" data-gtm-label="Study > Starting at UQ">Starting at UQ</a></li>
@@ -63,7 +64,7 @@
                             <li><a href="https://study.uq.edu.au/high-school-students" data-gtm-label="Study > High school students">High school students</a></li>
                             <li><a href="https://study.uq.edu.au/non-school-leavers" data-gtm-label="Study > Non-school leavers">Non-school leavers</a></li>
                             <li><a href="https://study.uq.edu.au/study-options/research" data-gtm-label="Study > Postgraduate research (HDR) students">Postgraduate research (HDR) students</a></li>
-                            <li><a href="https://atsis.uq.edu.au/future-students" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
+                            <li><a href="https://indigenous-engagement.uq.edu.au/study" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
                             <li><a href="https://study.uq.edu.au/study-options/study-abroad" data-gtm-label="Study > Study abroad and exchange students">Study abroad and exchange students</a></li>
                             <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Study > Teachers and guidance counsellors">Teachers and guidance counsellors</a></li>
                             <li><a href="https://study.uq.edu.au/parents" data-gtm-label="Study > Parents and guardians">Parents and guardians</a></li>
@@ -130,7 +131,7 @@
                             <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Partnership opportunities">Partnership opportunities</a></li>
                             <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Partners and community > Research and corporate partnerships">Research and corporate partnerships</a></li>
                             <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Work placements and internships">Work placements and internships</a></li>
-                            <li><a href="https://global-engagement.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
+                            <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
                             <li><a href="https://about.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorship">Sponsorship</a></li>
                           </ul>
                         </div>
@@ -141,7 +142,7 @@
                           <ul>
                             <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni community">Alumni community</a></li>
                             <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Giving and philanthropy">Giving and philanthropy</a></li>
-                            <li><a href="https://atsis.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
+                            <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
                             <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
                             <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Community engagement and volunteering">Community engagement and volunteering</a></li>
                             <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Community facilities and services">Community facilities and services</a></li>
@@ -226,8 +227,9 @@
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Study with us</a>
                 <ul>
                   <li><a href="https://study.uq.edu.au/study-options/programs" data-gtm-label="Study > Find a course or program">Find a course or program</a></li>
-                  <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
+                  <li><a href="https://study.uq.edu.au/study-options/browse-study-areas" data-gtm-label="Study > Browse study areas">Browse study areas</a></li>
                   <li><a href="https://study.uq.edu.au/study-options" data-gtm-label="Study > Study options">Study options</a></li>
+                  <li><a href="https://study.uq.edu.au/short-courses" data-gtm-label="Study > Short courses">Short courses</a></li>
                   <li><a href="https://study.uq.edu.au/admissions" data-gtm-label="Study > How to apply">How to apply</a></li>
                   <li><a href="https://scholarships.uq.edu.au" data-gtm-label="Study > Scholarships">Scholarships</a></li>
                   <li><a href="https://my.uq.edu.au/starting-at-uq" data-gtm-label="Study > Starting at UQ">Starting at UQ</a></li>
@@ -251,7 +253,7 @@
                   <li><a href="https://study.uq.edu.au/high-school-students" data-gtm-label="Study > High school students">High school students</a></li>
                   <li><a href="https://study.uq.edu.au/non-school-leavers" data-gtm-label="Study > Non-school leavers">Non-school leavers</a></li>
                   <li><a href="https://study.uq.edu.au/study-options/research" data-gtm-label="Study > Postgraduate research (HDR) students">Postgraduate research (HDR) students</a></li>
-                  <li><a href="https://atsis.uq.edu.au/future-students" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
+                  <li><a href="https://indigenous-engagement.uq.edu.au/study" data-gtm-label="Study > Aboriginal and Torres Strait Islander students">Aboriginal and Torres Strait Islander students</a></li>
                   <li><a href="https://study.uq.edu.au/study-options/study-abroad" data-gtm-label="Study > Study abroad and exchange students">Study abroad and exchange students</a></li>
                   <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Study > Teachers and guidance counsellors">Teachers and guidance counsellors</a></li>
                   <li><a href="https://study.uq.edu.au/parents" data-gtm-label="Study > Parents and guardians">Parents and guardians</a></li>
@@ -309,7 +311,7 @@
                   <li><a href="https://www.uq.edu.au/partner/business-industry" data-gtm-label="Partners and community > Partnership opportunities">Partnership opportunities</a></li>
                   <li><a href="https://research.uq.edu.au/partner-with-us" data-gtm-label="Partners and community > Research and corporate partnerships">Research and corporate partnerships</a></li>
                   <li><a href="https://employability.uq.edu.au/work-experience" data-gtm-label="Partners and community > Work placements and internships">Work placements and internships</a></li>
-                  <li><a href="https://global-engagement.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
+                  <li><a href="https://global-partnerships.uq.edu.au/partnerships" data-gtm-label="Partners and community > Teaching and exchange collaborations">Teaching and exchange collaborations</a></li>
                   <li><a href="https://about.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorship">Sponsorship</a></li>
                 </ul>
               </li>
@@ -318,7 +320,7 @@
                 <ul>
                   <li><a href="https://alumni.uq.edu.au" data-gtm-label="Partners and community > Alumni community">Alumni community</a></li>
                   <li><a href="https://alumni.uq.edu.au/giving" data-gtm-label="Partners and community > Giving and philanthropy">Giving and philanthropy</a></li>
-                  <li><a href="https://atsis.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
+                  <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement">Indigenous engagement</a></li>
                   <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
                   <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Community engagement and volunteering">Community engagement and volunteering</a></li>
                   <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="Partners and community > Community facilities and services">Community facilities and services</a></li>
@@ -506,7 +508,7 @@
                   <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Jobs at UQ</a>
+                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -603,7 +605,7 @@
                   <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Jobs at UQ</a>
+                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -680,7 +682,7 @@
           <nav class="uq-footer__contact-item" aria-label="Social Media" data-gtm-category="Social share link">
             <ul class="uq-footer__footer-list uq-footer__contact-social"> 
               <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Facebook" data-gtm-label="Facebook"></a></li> 
-              <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
+              <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/school/university-of-queensland" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
               <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Twitter" data-gtm-label="Twitter"></a></li>
               <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Youtube" data-gtm-label="Youtube"></a></li>
               <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
