--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -5,7 +5,7 @@
     <title>UQ UQDS Example</title>
     <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
     <link href="favicon.ico" type="image/x-icon" rel="icon" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
