--- a/packages/storybook-html/.storybook/preview-head.html
+++ b/packages/storybook-html/.storybook/preview-head.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap" />
