Fixed double up title

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -75,7 +75,7 @@
                 </li>
                 <li><a href="#">Research excellence and impact</a></li>
                 <li><a href="#">Faculties, schools, intitutues & centres</a></li>
-                <li><a href="#">Research facilities and infrastructure and infrastructure</a></li>
+                <li><a href="#">Research facilities and infrastructure</a></li>
                 <li><a href="#">Find a researcher or supervisor</a></li>
                 <li><a href="#">Research degrees and graduate students</a></li>
                 <li><a href="#">Be a research participant or volunteer</a></li>
@@ -211,7 +211,7 @@
                           <ul>
                             <li><a href="#">Research excellence and impact</a></li>
                             <li><a href="#">Faculties, schools, intitutues & centres</a></li>
-                            <li><a href="#">Research facilities and infrastructure and infrastructure</a></li>
+                            <li><a href="#">Research facilities and infrastructure</a></li>
                             <li><a href="#">Find a researcher or supervisor</a></li>
                             <li><a href="#">Research degrees and graduate students</a></li>
                             <li><a href="#">Be a research participant or volunteer</a></li>
