--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -86,7 +86,7 @@
                             <li><a href="https://research.uq.edu.au/news" data-gtm-label="Research > Research news">Research news</a></li>
                             <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
                             <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
-                            <li><a href="https://www.uq.edu.au/research/about/research-infrastructure" data-gtm-label="Research > Research facilities and infrastructure and infrastructure">Research facilities and infrastructure and infrastructure</a></li>
+                            <li><a href="https://www.uq.edu.au/research/about/research-infrastructure" data-gtm-label="Research > Research facilities and infrastructure">Research facilities and infrastructure</a></li>
                             <li><a href="https://researchers.uq.edu.au" data-gtm-label="Research > Find a researcher">Find a researcher</a></li>
                             <li><a href="https://research.uq.edu.au/contact" data-gtm-label="Research > Contact">Contact</a></li>
                           </ul>
@@ -274,7 +274,7 @@
                   <li><a href="https://research.uq.edu.au/news" data-gtm-label="Research > Research news">Research news</a></li>
                   <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
                   <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
-                  <li><a href="https://www.uq.edu.au/research/about/research-infrastructure" data-gtm-label="Research > Research facilities and infrastructure and infrastructure">Research facilities and infrastructure and infrastructure</a></li>
+                  <li><a href="https://www.uq.edu.au/research/about/research-infrastructure" data-gtm-label="Research > Research facilities and infrastructure">Research facilities and infrastructure</a></li>
                   <li><a href="https://researchers.uq.edu.au" data-gtm-label="Research > Find a researcher">Find a researcher</a></li>
                   <li><a href="https://research.uq.edu.au/contact" data-gtm-label="Research > Contact">Contact</a></li>
                 </ul>
