fix: updated twitter labels

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -683,7 +683,7 @@
             <ul class="uq-footer__footer-list uq-footer__contact-social"> 
               <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Facebook" data-gtm-label="Facebook"></a></li> 
               <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/school/university-of-queensland" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
-              <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="X" data-gtm-label="X"></a></li>
+              <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Follow us on X" data-gtm-label="Follow us on X"></a></li>
               <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Youtube" data-gtm-label="Youtube"></a></li>
               <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
             </ul>
