feat: update ppl to new link

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -177,7 +177,7 @@
                             <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
                             <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
                             <li><a href="https://about.uq.edu.au/organisation" data-gtm-label="About > Organisational structure and governance">Organisational structure and governance</a></li>
-                            <li><a href="https://ppl.app.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
+                            <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
                             <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
                           </ul>
                         </div>
@@ -352,7 +352,7 @@
                   <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
                   <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
                   <li><a href="https://about.uq.edu.au/organisation" data-gtm-label="About > Organisational structure and governance">Organisational structure and governance</a></li>
-                  <li><a href="https://ppl.app.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
+                  <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
                   <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
                 </ul>
               </li>
